# cmd/api/users.go
@@ -1,8 +1,6 @@
 package main
 
 import (
-	"context"
-	"errors"
 	"net/http"
 	"strconv"
 
@@ -35,10 +33,6 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-type FollowUserPayload struct {
-	UserID int64 `json:"user_id"`
-}
-
 // FollowUser godoc
 //
 //	@Summary		Follow user
@@ -46,8 +40,7 @@ type FollowUserPayload struct {
 //	@Tags			users
 //	@Accept			json
 //	@Produce		json
-//	@Param			userID	path	int64				true	"User ID to follow"
-//	@Param			payload	body	FollowUserPayload	true	"Follow payload"
+//	@Param			userID	path	int64	true	"User ID to follow"
 //	@Success		204
 //	@Failure		400	{object}	error
 //	@Failure		404	{object}	error
@@ -57,15 +50,14 @@ type FollowUserPayload struct {
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromCtx(r)
 
-	// TODO: Revert back to auth userID from ctx
-	var payload FollowUserPayload
-	if err := readJSON(w, r, &payload); err != nil {
+	followedUser, err := strconv.ParseInt(chi.URLParam(r, "userID"), 10, 64)
+	if err != nil {
 		app.badRequestResponse(w, r, err)
 		return
 	}
 
 	ctx := r.Context()
-	if err := app.store.Followers.Follow(ctx, followerUser.ID, payload.UserID); err != nil {
+	if err := app.store.Followers.Follow(ctx, followerUser.ID, followedUser); err != nil {
 		switch err {
 		case store.ErrConflict:
 			app.conflictResponse(w, r, err)
@@ -88,59 +80,31 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 //	@Tags			users
 //	@Accept			json
 //	@Produce		json
-//	@Param			userID	path	int64				true	"User ID to unfollow"
-//	@Param			payload	body	FollowUserPayload	true	"Unfollow payload"
+//	@Param			userID	path	int64	true	"User ID to unfollow"
 //	@Success		204
 //	@Failure		400	{object}	error
 //	@Failure		404	{object}	error
 //	@Failure		500	{object}	error
 //	@Router			/users/{userID}/unfollow [put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
-	unfollowedUser := getUserFromCtx(r)
+	followerUser := getUserFromCtx(r)
 
-	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
-		app.internalServerError(w, r, err)
-	}
-
-	// TODO: Revert back to auth userID from ctx
-	var payload FollowUserPayload
-	if err := readJSON(w, r, &payload); err != nil {
+	unfollowedUser, err := strconv.ParseInt(chi.URLParam(r, "userID"), 10, 64)
+	if err != nil {
 		app.badRequestResponse(w, r, err)
 		return
 	}
 
 	ctx := r.Context()
-	app.store.Followers.Unfollow(ctx, unfollowedUser.ID, payload.UserID)
+	if err := app.store.Followers.Unfollow(ctx, followerUser.ID, unfollowedUser); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
 
 	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
 		app.internalServerError(w, r, err)
 	}
 
-}
-
-func (app *application) userContextMiddleware(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		idParam := chi.URLParam(r, "userID")
-		id, err := strconv.ParseInt(idParam, 10, 64)
-		if err != nil {
-			app.internalServerError(w, r, err)
-		}
-
-		ctx := r.Context()
-		user, err := app.store.Users.GetByID(ctx, id)
-		if err != nil {
-			switch {
-			case errors.Is(err, store.ErrNotFound):
-				app.notFoundResponse(w, r, err)
-			default:
-				app.internalServerError(w, r, err)
-			}
-			return
-		}
-
-		ctx = context.WithValue(ctx, userCtx, user)
-		next.ServeHTTP(w, r.WithContext(ctx))
-	})
 }
 
 func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
